# TheOne

TheOne/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  package.json  plan.md  pnpm-lock.yaml  pyproject.toml
TheOne/.github/workflows/: ci.yml
TheOne/Root/: Canonical state shape (JSON Schema).md  Exact agent output schemas and merge rules.md  PRD.md  Validator rule set (conflict matrix).md
TheOne/alembic/: env.py
TheOne/alembic/versions/: 0001_initial_schema.py
TheOne/apps/web/: package.json  tailwind.config.ts
TheOne/services/api/app/: db_models.py  main.py  schemas.py  sse.py  store.py
TheOne/services/api/tests/: test_api_contract.py
TheOne/services/export/: renderer.py
TheOne/services/orchestrator/: cluster_runtime.py  dependencies.py  runtime.py
TheOne/services/orchestrator/agents/: __init__.py  base.py  channel_agent.py  clarification_agent.py  competitive_teardown_agent.py  evidence_collector.py  execution_agent.py  graph_builder.py  icp_agent.py  people_cash_agent.py  positioning_agent.py  pricing_agent.py  product_strategy_agent.py  registry.py  sales_motion_agent.py  stub_agents.py  tech_feasibility_agent.py  validator_agent.py
TheOne/services/orchestrator/chat/: intake_chat.py
TheOne/services/orchestrator/clusters/: __init__.py  dependencies.py  engine.py  registry.py
TheOne/services/orchestrator/orchestrator/: __init__.py  orchestrator_agent.py  (+1 more)
TheOne/test/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
(+99 files in other folders)
