[project]
name = "gtmgraph"
version = "0.1.0"
description = "GTMGraph orchestration and API services"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.0",
  "celery[redis]>=5.4.0",
  "langgraph>=0.2.0",
  "jsonschema>=4.23.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9"
]

[dependency-groups]
dev = [
  "pytest>=7.3.1",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
  "services/orchestrator/tests",
  "services/api/tests"
]

[tool.ruff]
line-length = 100
